--- a/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/gerente/inicio/inicio.component.html
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/gerente/inicio/inicio.component.html
@@ -14,17 +14,17 @@
             <a class="nav-link active" id="tab-operadores-id" data-toggle="pill" href="#tab-operadores" role="tab"
               aria-controls="tab-operadores" aria-selected="true" style="color: #fff">N° Operadores</a>
           </li>
-          <li class="nav-item" (click)="mostrarGrafico(2)">
-            <a class="nav-link" id="tab-total-id" data-toggle="pill" href="#tab-total" role="tab"
-              aria-controls="tab-total" aria-selected="false" style="color: #fff">Total Recaudación Cotizaciones</a>
+          <li class="nav-item" (click)="mostrarGrafico(4)">
+            <a class="nav-link" id="tab-sinEmitir-id" data-toggle="pill" href="#tab-sinEmitir" role="tab"
+              aria-controls="tab-sinEmitir" aria-selected="false" style="color: #fff">N° Cotizaciones Realizadas</a>
           </li>
           <li class="nav-item" (click)="mostrarGrafico(3)">
             <a class="nav-link" id="tab-emitidas-id" data-toggle="pill" href="#tab-emitidas" role="tab"
-              aria-controls="tab-emitidas" aria-selected="false" style="color: #fff">Cotizaciones Emitidas</a>
+              aria-controls="tab-emitidas" aria-selected="false" style="color: #fff">N° Cotizaciones Emitidas</a>
           </li>
-          <li class="nav-item" (click)="mostrarGrafico(4)">
-            <a class="nav-link" id="tab-sinEmitir-id" data-toggle="pill" href="#tab-sinEmitir" role="tab"
-              aria-controls="tab-sinEmitir" aria-selected="false" style="color: #fff">Cotizaciones Sin Emitir</a>
+          <li class="nav-item" (click)="mostrarGrafico(2)">
+            <a class="nav-link" id="tab-total-id" data-toggle="pill" href="#tab-total" role="tab"
+              aria-controls="tab-total" aria-selected="false" style="color: #fff">Recaudado Cotizaciones Emitidas</a>
           </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
@@ -173,6 +173,7 @@
       </div>
     </div>
     <br>
+
     <div class="row">
       <div class="col-md-12">
         <div class="card">
