--- a/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/inicio-sesion/inicio-sesion.component.html
@@ -21,7 +21,7 @@
               <div class="form-group">
                 <label class="label">Correo Electrónico</label>
                 <div class="input-group">
-                  <input type="email" class="form-control" formControlName="Email"
+                  <input type="email" class="form-control" formControlName="Email" style="font-size: 13.5px !important;"
                     placeholder="Ingresar Correo Electrónico">
                   <div class="input-group-append">
                     <span class="input-group-text">
@@ -33,7 +33,7 @@
               <div class="form-group">
                 <label class="label">Contraseña</label>
                 <div class="input-group">
-                  <input type="password" class="form-control" formControlName="Contrasena"
+                  <input type="password" class="form-control" formControlName="Contrasena" style="font-size: 13.5px !important;"
                     placeholder="Ingresar Contraseña">
                   <div class="input-group-append">
                     <span class="input-group-text">
