--- a/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/gerente/validacion/validacion.component.css
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/gerente/validacion/validacion.component.css
@@ -1,13 +1,18 @@
-.titulo-tarjeta{
-    text-decoration: none !important; 
-    font-weight: bold; 
-    font-size: 14px; 
+.contenedor {
+    padding-top: 100px;
+    color: white;
+}
+
+.titulo-tarjeta {
+    text-decoration: none !important;
+    font-weight: bold;
+    font-size: 14px;
     padding-left: 20px;
 }
 
-.tabla-detalle{
+.tabla-detalle {
     margin-top: 10px;
-    border: 2px solid #000000 !important ;
+    border: 2px solid #000000 !important;
     border-radius: 10px 10px 10px 10px;
     -moz-border-radius: 10px 10px 10px 10px;
     -webkit-border-radius: 10px 10px 10px 10px;
@@ -16,19 +21,19 @@
 
 @keyframes efecto-boton-cotizacion {
     0% {
-      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8);
+        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8);
     }
     100% {
-      box-shadow: 0 0 0 5px rgba(0, 0, 0, 0);
+        box-shadow: 0 0 0 5px rgba(0, 0, 0, 0);
     }
-  }
-  
-  .btn-effect-white {
-    animation: efecto-boton-cotizacion 1s infinite;
-  }
+}
 
-  .class-combo {
+.btn-effect-white {
+    animation: efecto-boton-cotizacion 1s infinite;
+}
+
+.class-combo {
     font-size: 10px !important;
     width: 100%;
     padding: 0px !important;
-  }
+}
